--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "about", "#" %></li>
+      <li><%= link_to "about", about_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
