--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+   <h1>Welcome to Field APP</h1>
+   <h2>
+       Erland's application to store field applications and retrieve info from Sharefile
+   </h2>
+</div>
 
