--- a/app/views/Contacts/new.html.erb
+++ b/app/views/Contacts/new.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
-    <%= form_for @contact do |t| %>
-        <%= t.label :name %>
-        <%= t.text_field :name %>
+    <%= form_for @contact do |f| %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
         
-         <%= t.label :email %>
-        <%= t.email_field :email %>
+         <%= f.label :email %>
+        <%= f.email_field :email %>
         
-         <%= t.label :comments %>
-        <%= t.text_area :conmments %>
+         <%= f.label :comments %>
+        <%= f.text_area :conmments %>
         
     <% end %>
         
