--- a/app/views/Contacts/new.html.erb
+++ b/app/views/Contacts/new.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <%= form_for @contact do |f|
-    <%= f.label :name
-    <%= f.text_field :name
+    <%= f.label :name%>
+    <%= f.text_field :name%>
 
-    <%= f.label :email
-    <%= f.email_field :email
+    <%= f.label :email%>
+    <%= f.email_field :email%>
     
-    <%= f.label :comments
-    <%= f.text_area :comments
+    <%= f.label :comments%>
+    <%= f.text_area :comments%>
         
     <% end %>
         
