--- a/app/views/Contacts/new.html.erb
+++ b/app/views/Contacts/new.html.erb
@@ -1,15 +1,27 @@
 <div class="row">
-  <%= form_for @contact do |f|
-    <%= f.label :name%>
-    <%= f.text_field :name%>
+  <div class="col-md-4 col-md-offset-4">
+      <div class="well">
+        <div class ="form-group">
+          <%= f.label :name %>
+          <%= f.text_field :name, class: 'form-control' %>
+        </div>
+       
+        <div class="form-group">
+         <%= f.label :email %>
+         <%= f.email_field :email, class : 'form-control' %>
+        </div>
+       
+        <div class="form-group">
+         <%= f.label :comments %>
+         <%= f.text_area :comments, class: 'form-control' %>
+        </div>
+        <%= f.submit "Submit", class: 'btn btn-default' %>
+      <% end %>
+    </div>
+  </div>
+</div.>
 
-    <%= f.label :email%>
-    <%= f.email_field :email%>
-    
-    <%= f.label :comments%>
-    <%= f.text_area :comments%>
-        
-    <% end %>
+  
         
     
 </div>
